# g2f-alphaearth-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: clean_embedding_workflow.yaml  pipeline.yaml  real_pipeline.yaml
data/outputs/: g2f_embeddings.csv
data/sample/: environment.csv  fields.csv
scripts/: run_pipeline.py
scripts/experiments/: analyze_buffer_similarity.py  analyze_confidence_scores.py  plot_buffer_umap.py  run_buffer_sensitivity.py  run_ftw_multisite_inference.py  sample_ftw_sites.py
scripts/ftw/: compare_polygon_vs_buffer.py  extract_polygon_alphaearth_embedding.py  select_nearest_polygon.py
scripts/preprocess/: build_inputs_from_pheno.py
scripts/workflows/: run_clean_embeddings.py
src/g2f_alphaearth_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/g2f_embeddings/: config.py  earth_engine.py  io_utils.py  pipeline.py
src/g2f_embeddings.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
